# mce-pmd

./: .clang-format  Doxyfile  build.sh  flexbuild.sh  gdb.init  gdb_debug.sh  release.sh  scan_undocumented.py
docs/: 01_overview.md  03_features.md  04_enable_features.md  PMD_DRIVERS.md  hygon_7490_memory_topology.md
docs/pmd/: README.md
drivers/net/mce/: Makefile  mce.h  mce_compat.h  mce_ethdev.c  mce_ethdev_vf.c  mce_fdir_flow.c  mce_fdir_flow.h  mce_flow.c  mce_flow.h  mce_generic_flow.c  mce_generic_flow.h  mce_intr.c  mce_intr.h  mce_logs.h  mce_mp.c  mce_mp.h  mce_parse.c  mce_parse.h  mce_pattern.h  mce_pf.c  mce_pf.h  mce_route_proxy.c  mce_route_proxy.h  mce_rss.c  mce_rss.h  mce_rxtx.c  mce_rxtx.h  mce_rxtx_vec.h  mce_rxtx_vec_avx2.c  mce_rxtx_vec_dummy.c  mce_rxtx_vec_neon.c  mce_rxtx_vec_sse.c  mce_service.c  mce_service.h  mce_switch_flow.c  mce_switch_flow.h  mce_telemetry.c  mce_testpmd.c  mce_tm.c  mce_tm.h  (+5 more)
drivers/net/mce/base/: mailbox.h  mce_bitops.h  mce_common.c  mce_common.h  mce_dcb.c  mce_dma_regs.h  mce_eth_regs.h  mce_fdir.c  mce_fdir.h  mce_fwchnl.c  mce_fwchnl.h  mce_hw.h  mce_irq.c  mce_irq.h  mce_l2_filter.c  mce_l2_filter.h  mce_mac_regs.h  mce_mbx.c  mce_mbx.h  mce_osdep.h  mce_pf2vfchnl.c  mce_pf2vfchnl.h  mce_pfvf.c  mce_pfvf.h  mce_profile_mask.c  mce_profile_mask.h  mce_ptp.c  mce_ptp.h  mce_ptype.h  mce_rpu.c  mce_rpu.h  mce_sched.c  mce_sched.h  mce_switch.c  mce_switch.h  mce_vf.c  mce_vf.h  mce_vp_reg.c  mce_vp_reg.h  meson.build
patchs/16.04/: 0001-net-mce-add-PMD-skeleton.patch
patchs/16.07/: 0001-net-mce-add-PMD-skeleton.patch
patchs/16.11/: 0001-net-mce-add-PMD-skeleton.patch
patchs/17.02/: 0001-net-mce-add-PMD-skeleton.patch
patchs/17.05/: 0001-net-mce-add-PMD-skeleton.patch
patchs/17.08/: 0001-net-mce-add-PMD-skeleton.patch
scripts/: do_checkpatches.sh  dpdk-runtime-env-setup-vf.sh  dpdk-runtime-env-setup.sh  format-srcs.sh  link_rnpce_drv_to_dpdk_core.sh  mce-dpdk-telemetry.py
tools/: README.md
(+25 files in other folders)
